--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Antonio Arleudo da Costa",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.2",
@@ -21,5 +22,8 @@
     "tsx": "^4.19.0",
     "typescript": "^5.5.4",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.19.1"
   }
 }
